Alignement correct des titres avec boutons.
- Ils sont reconstruits avec flex, eux aussi.
- À bas les flottants, encore et encore.
- Qu'ils coûlent, d'accord, d'accord.

--- a/assets/scss/pages/_flexpage.scss
+++ b/assets/scss/pages/_flexpage.scss
@@ -48,6 +48,18 @@ $content-width: 1145px;
         }
     }
 
+    section > h2:not(.inline) {
+        display: flex;
+
+        span {
+            flex: 2;
+        }
+
+        .btn {
+            float: none;
+        }
+    }
+
     .flexpage-title-tool {
         display: flex;
         flex-direction: row;
